Added hashed password to a model
